--- a/Array Replace/arrayReplace.html
+++ b/Array Replace/arrayReplace.html
@@ -8,7 +8,7 @@
 			// Originally used for loop and stored each value in array
 			/*let ans = [];
 
-			for (let i = 0; i < arryReplace.length; i++){
+			for (let i = 0; i < arr.length; i++){
 				arr[i] === val ? ans.push(rep) : ans.push(arr[i]);
 			}
 
